@@ -5,6 +5,9 @@ remctl 2.9 (unreleased)
     Fix remctl client library crashes due to an uninitialized variable
     when the network connection fails.
 
+    Fix several inaccuracies in the Net::Remctl API documentation.
+    Thanks, Alf Wachsmann.
+
 remctl 2.8 (2007-06-27)
 
     Add a Net::Remctl Perl module, optionally compiled (and enabled with
